--- a/src/app/queue/queue.css
+++ b/src/app/queue/queue.css
@@ -9,28 +9,28 @@
 
 
     .queue-current {
-        @apply text-white bg-green-600 w-screen m-0 h-1/3 shadow-xl content-center text-center items-center justify-center flex;
+        @apply text-white bg-content2 w-screen m-0 h-1/3 shadow-xl content-center text-center items-center justify-center flex;
     }
     .queue-current-card {
-        @apply bg-lime-400 rounded-3xl 4xl:text-[14rem] 4xl:w-80 4xl:h-80 m-3 p-3 md:text-[11rem] md:w-60 md:h-60 text-white shadow-xl cursor-pointer select-none transition-all content-center;
+        @apply bg-primary rounded-3xl 4xl:text-[14rem] 4xl:w-80 4xl:h-72 m-3 p-3 md:text-[11rem] md:w-60 md:h-60  shadow-xl cursor-pointer select-none transition-all content-center;
     }
 
     .queue-screen {
-        @apply flex min-h-screen flex-col p-0 h-screen bg-slate-100;
+        @apply flex min-h-screen flex-col p-0 h-screen;
     }
     .queue-top {
-        @apply text-green-500 text-9xl bg-green-600 w-screen m-0 h-1/3 shadow-xl flex flex-wrap content-center text-center p-20;
+        @apply  text-9xl bg-content2 w-screen m-0 h-1/3 shadow-xl flex flex-wrap content-center text-center p-20;
     }
 
     .queue-bottom {
-        @apply h-1/3 w-screen content-center text-center 4xl:p-20 md:p-14 flex flex-wrap;
+        @apply  bg-content1 h-1/3 w-screen content-center text-center 4xl:p-20 md:p-14 flex flex-wrap justify-center;
     }
 
     .student-card {
-        @apply bg-lime-400 rounded-3xl 4xl:text-8xl 4xl:w-36 4xl:h-32 m-3 p-3 md:text-[4rem] md:w-28 md:h-24 text-white shadow-xl cursor-pointer select-none transition-all leading-none content-center;
+        @apply text-white bg-primary rounded-3xl 4xl:text-7xl 4xl:w-32 4xl:h-28 m-3 p-3 md:text-[4rem] md:w-24 md:h-20  shadow-xl cursor-pointer select-none transition-all leading-none content-center;
     }
     .student-card-disabled {
-        @apply bg-gray-400 student-card animate-jump animate-once animate-duration-200 animate-ease-linear
+        @apply bg-default student-card animate-jump animate-once animate-duration-200 animate-ease-linear
     }
 
     .queue-card {
@@ -60,7 +60,7 @@
     }
 
     .menu-sidebar{
-        @apply w-96 absolute bg-white h-1/2 right-0 rounded-l-xl top-24 opacity-100 invisible z-50 shadow-2xl p-10;
+        @apply w-96 absolute bg-content1 right-0 rounded-l-xl top-24 opacity-100 invisible z-50 shadow-2xl p-10;
     }
     .menu-sidebar.open{
         @apply mr-0 visible;
